# snow-utils-skills

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  SKILL.md  TESTING.md  TODO.md  Taskfile.yml
common/: README.md  pyproject.toml
common/src/snow_utils_common/: __init__.py  check_setup.py  network_presets.py  snow-utils-setup.sql  snow_common.py
example-manifests/: networks-demo-manifest.md  pat-demo-manifest.md  volumes-demo-manifest.md
iceberg-external-volume/: SKILL.md  pyproject.toml
iceberg-external-volume/scripts/: extvolume.py  snow_common.py
snow-bin-skills/: README.md
snow-utils-networks/: .env.example  README.md  SKILL.md  network.py  pyproject.toml  snow_common.py
snow-utils-networks/scripts/: network.py  pat.py  snow-utils-setup.sql  snow_common.py
snow-utils-pat/: .env.example  README.md  SKILL.md  pyproject.toml
snow-utils-pat/scripts/: check_setup.py  extvolume.py  network.py  network_presets.py  pat.py  snow-utils-setup.sql
snow-utils-volumes/: .env.example  README.md  SKILL.md  pyproject.toml
snow-utils-volumes/scripts/: check_setup.py  extvolume.py  snow_common.py
snowflake-networks/: .env.example  SKILL.md  pyproject.toml
snowflake-networks/scripts/: network.py
snowflake-pat/: SKILL.md  pyproject.toml
snowflake-pat/scripts/: pat.py  snow_common.py
