[project]
name = "snowflake-networks"
version = "0.1.0"
description = "CoCo skill for creating Snowflake network rules and policies"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "snow-utils-common",
]

[tool.uv.sources]
snow-utils-common = { path = "../common", editable = true }
