[project]
name = "snowflake-networks"
version = "0.1.0"
description = "Cortex Code skill for creating Snowflake network rules and policies"
requires-python = ">=3.12"
dependencies = [
    "snow-utils",
]

[tool.uv.sources]
snow-utils = { git = "https://github.com/kameshsampath/snow-utils", branch = "main" }
