[project]
name = "snowflake-pat"
version = "0.1.0"
description = "Cortex Code skill for creating Snowflake Programmatic Access Tokens"
requires-python = ">=3.12"
dependencies = [
    "snow-utils",
]

[tool.uv.sources]
snow-utils = { git = "https://github.com/kameshsampath/snow-utils", branch = "main" }
