[project]
name = "iceberg-external-volume"
version = "0.1.0"
description = "CoCo skill for creating Snowflake external volumes with S3"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "snow-utils-common",
]

[tool.uv.sources]
snow-utils-common = { path = "../common", editable = true }
